tracker: map key names to SPARQL variables

The Grilo tracker plugin maps grilo key names to SPARQL variables. Key
names can contains dashes for multipart key names, SPARQL variables
cannot. This adds an extra mapping to the key lookup that converts the
dashes to underscores that can be used as SPARQL variable names.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=761168.